# mdbook-diataxis

./: CHANGELOG.md  Cargo.toml  README.md
src/: args.rs  install.rs  lib.rs  main.rs  preprocessor.rs
src/snapshots/: mdbook_diataxis__install__tests__default-2.snap  mdbook_diataxis__install__tests__default.snap  mdbook_diataxis__preprocessor__tests__compass__configured.snap  mdbook_diataxis__preprocessor__tests__compass__default.snap  mdbook_diataxis__preprocessor__tests__toc__default.snap  mdbook_diataxis__tests__compass__configured.snap  mdbook_diataxis__tests__compass__default.snap  mdbook_diataxis__tests__toc__default.snap
