[package]
name = "mdbook-diataxis"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["color", "derive", "wrap_help"] }
indoc = "2.0.6"
mdbook = "0.4.51"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
semver = "1.0.26"
serde_json = "1.0.140"
toml = "0.5.11"
toml_edit = "0.22.27"

[dev-dependencies]
googletest = "0.14.1"
insta = { version = "1.43.1", features = ["toml"] }
tempfile = "3.20.0"
