[package]
name = "mdbook-diataxis"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "A preprocessor for mdBook which helps apply the Diátaxis documentation framework"
repository = "https://github.com/TheSignPainter98/mdbook-diataxis"
readme = "README.md"
keywords = ["docs", "documentation", "diataxis"]

[dependencies]
aho-corasick = { version = "1.1.3", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.40", features = ["color", "derive", "wrap_help"] }
indoc = { version = "2.0.6", default-features = false }
mdbook = { version = "0.4.51", default-features = false }
semver = { version = "1.0.26", features = ["std"], default-features = false }
serde_json = { version = "1.0.140", default-features = false }
toml = { version = "0.5.11", default-features = false }
toml_edit = { version = "0.22.27", features = ["display", "parse"], default-features = false }

[dev-dependencies]
googletest = { version = "0.14.1", default-features = false }
insta = { version = "1.43.1", features = ["toml"] }
tempfile = { version = "3.20.0", default-features = false }
